
	* exscript, src/Exscript/Exscript.py: Fix several command line arguments
	that were mistakenly ignored. Got rid of the -a and -A command line
	arguments - this should now be done in the Exscript.
	* src/Exscript/TerminalActions/*.py: Port to new SpiffWorkQueue API.
	* src/Exscript/Interpreter/stdlib/Sys/tacacs_*.py: Add functions for
	aquiring/releasing the global TACACS lock.

2008-06-26 Samuel Abels <http://debain.org>

	* src/Exscript/Interpreter/stdlib/Connection/*.py: Renamed send() to exec().
	Replaced old send() function by a function that does not wait for a prompt 
	after sending the data. Added sendline() and execline() equivalents that
	automatically append a newline character.
	* src/Exscript/Interpreter/Code.py, src/Exscript/Interpreter/Term.py: Add
	support for bool types using the "true" and "false" keywords.
	* src/Exscript/Interpreter/Loop.py: Allow for more relaxed whitespace
	handling.
	* src/Exscript/Interpreter/*.py: Cleanup the parser by adding a
	parser.skip() method to replace useless while loops everywhere.
	* src/Exscript/Interpreter/stdlib/Connection/guess_os.py: New.

2008-06-25 Samuel Abels <http://debain.org>

	* exscript, src/Exscript/Exscript.py: Fix: Passed in variable names were 
	not correctly defined.
	* exscript: Fix logging.
	* src/Exscript/Interpreter/stdlib/String/: New namespace for string 
	functions.
	* src/Exscript/Interpreter/stdlib/Connection/auth*.py: New.

2008-06-24 Samuel Abels <http://debain.org>

	* src/Exscript/Interpreter/stdlib/IPv4/util.py: Fix mask2pfxlen to work with
	the 255.255.255.255 mask.
	* exscript, src/Exscript/Exscript.py: Fix: Now works with Python 2.2 again.

2008-06-23 Samuel Abels <http://debain.org>

	* all-over: Add mask2pfxlen function to the stdlib.

2008-06-22 Samuel Abels <http://debain.org>

	* all-over: Major redesign and cleanups, move some libraries out of the 
	package.

2008-04-21 Samuel Abels <http://debain.org>
