@@ -6,6 +6,9 @@
 	* src/Exscript/TerminalActions/*.py: Port to new SpiffWorkQueue API.
 	* src/Exscript/Interpreter/stdlib/Sys/tacacs_*.py: Add functions for
 	aquiring/releasing the global TACACS lock.
+	* exscript, src/Exscript/TerminalActions/LoggedSequence.py,
+	src/Exscript/Exscript.py: Removed useless logfile locks. Added an overwrite 
+	option for logfiles.
 
 2008-06-26 Samuel Abels <http://debain.org>
 
